--- a/www/css/screen.css
+++ b/www/css/screen.css
@@ -4,14 +4,14 @@ html, body {
 	background: #FFF;
 }
 
-html {
-	overflow: hidden;
-}
-
 body {
-	overflow: auto;
 	opacity: 0;
 	min-width: 800px;
+	overflow: -moz-scrollbars-none;
+}
+
+::-webkit-scrollbar { 
+    display: none; 
 }
 
 a,p,h1,h2,h3,h4,h5,h6,li {
