--- a/www/css/project_index.css
+++ b/www/css/project_index.css
@@ -11,8 +11,8 @@ body {
 }
 
 a,p,h1,h2,h3,h4,h5,h6,li {
-	/*font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;*/
 	font-family: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia, serif;
+	font-size: 11pt;
 }
 
 div	{
@@ -42,4 +42,25 @@ ul {
 
 .projects-list {
 	margin: 100px 100px;
+}
+
+.projects-list li {
+	margin: 8px 0;
+}
+
+.back-btn {
+	display: block;
+	position: fixed;
+	width: 50px; height: 50px;
+	top: 25px; left: 25px;
+	font-size: .8em;
+	color: black;
+	text-decoration: none;
+	text-align: center;
+	z-index: 5;
+}
+
+.back-btn:hover {
+	text-decoration: none;
+	color: black;
 }
